# water-tracker

./: .env.template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
app/: main.py
notebooks/ImpactSecheresse/: RestrictionEauClass.py  main.py
notebooks/ImpactSecheresse/RestrictionEau/: RestrictionEau.ipynb
notebooks/ImpactSecheresse_Agri_Et_Bat/: Visualisation_sm.py  cds_lib.py  readme.txt  traitement_cds.py
notebooks/ImpactSecheresse_Agri_Et_Bat/data/: C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20130101000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20130201000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20130301000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20130401000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20130501000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20130601000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20130701000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20130801000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20130901000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20131001000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20131101000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20131201000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20140101000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20140201000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20140301000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20140401000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20140501000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20140601000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20140701000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20140801000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20140901000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20141001000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20141101000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20141201000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20150101000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20150201000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20150301000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20150401000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20150501000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20150601000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20150701000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20150801000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20150901000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20151001000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20151101000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20151201000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20160101000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20160201000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20160301000000-TCDR-v202212.0.0.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20160401000000-TCDR-v202212.0.0.nc  (+81 more)
notebooks/ImpactSecheresse_Agri_Et_Bat/data_2023/: C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20230101000000-ICDR-v202012.0.2.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20230201000000-ICDR-v202012.0.2.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20230301000000-ICDR-v202012.0.2.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20230401000000-ICDR-v202012.0.2.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20230501000000-ICDR-v202012.0.2.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20230601000000-ICDR-v202012.0.2.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20230701000000-ICDR-v202012.0.2.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20230801000000-ICDR-v202012.0.2.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20230901000000-ICDR-v202012.0.2.nc  C3S-SOILMOISTURE-L3S-SSMS-ACTIVE-MONTHLY-20231001000000-ICDR-v202012.0.2.nc
notebooks/ImpactSecheresse_Agri_Et_Bat/ressources/: doc_swi_catnat_277.pdf_Zone.Identifier  to_read.txt
notebooks/ImpactSecheresse_Restric_Eau/: RestrictionEauClass.py  main.py
notebooks/ImpactSecheresse_Restric_Eau/data/: moyenne_nappes_metropole_old.csv  moyenne_nappes_metropole_v2.csv  moyenne_nappes_metropole_v4_10.csv  moyenne_nappes_metropole_v5_4.csv  moyenne_nappes_metropole_v6.csv  moyenne_nappes_metropole_v7_15.csv  moyenne_pluviométrie_metropole_old.csv  moyenne_pluviométrie_metropole_v3.csv  moyenne_pluviométrie_metropole_v4_10.csv  moyenne_pluviométrie_metropole_v5_4.csv  moyenne_pluviométrie_metropole_v6.csv  moyenne_pluviométrie_metropole_v7_15.csv  (+2 more)
scripts/: streamlit_app.py
src/water_tracker/: __init__.py  display.py  utils.py
tests/: __init__.py  test_display.py  test_utils.py
tests/connectors/: __init__.py  test_base.py  test_copernicus.py  test_hubeau.py  test_meteo_france.py
tests/display/: __init__.py  test_chronicles.py  test_defaults.py  test_inputs.py
tests/transformers/: __init__.py  test_meteo_france.py  test_trends.py
water_tracker/: __init__.py
water_tracker/connectors/: __init__.py  base.py  copernicus.py  hubeau.py
(+20 files in other folders)
