[tool.poetry]
name = "water-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "water_tracker"}]

[tool.poetry.dependencies]
python = "~3.10"
streamlit = "^1.20.0"
pandas = "<2.0.0"
requests = "^2.28.2"
numpy = "^1.24.2"
types-requests = "^2.28.11.17"
xarray = "^2023.3.0"
cdsapi = "^0.6.1"
python-dotenv = "^1.0.0"
netcdf4 = "^1.6.3"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.260"
mypy = "^1.1.1"
interrogate = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = false
fail-under = 100
exclude = ["setup.py", "docs", "build", "tests", "scripts"]
verbose = 1
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false